[gd_scene load_steps=5 format=3 uid="uid://cbrbc7b0a1trb"]

[ext_resource type="Script" path="res://Models/Projectile/Rocket.gd" id="1_uom8j"]
[ext_resource type="PackedScene" uid="uid://5pyo40xpgn66" path="res://Models/Projectile/rocketscene.tscn" id="2_wnqxj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_erd45"]
radius = 0.03
height = 0.3

[sub_resource type="SphereShape3D" id="SphereShape3D_3ol2q"]

[node name="Rocket" type="RigidBody3D"]
collision_layer = 64
collision_mask = 113
gravity_scale = 0.0
script = ExtResource("1_uom8j")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CapsuleShape3D_erd45")

[node name="rocket" parent="." instance=ExtResource("2_wnqxj")]

[node name="ExplosionArea" type="Area3D" parent="."]
collision_layer = 64
collision_mask = 113

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExplosionArea"]
shape = SubResource("SphereShape3D_3ol2q")

[node name="RayCast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -0.5)
collision_mask = 112

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_explosion_area_body_entered"]
[connection signal="body_exited" from="ExplosionArea" to="." method="_on_explosion_area_body_exited"]
